// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Displays an error if task rejects with a string 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Error</label></h1>
<div class="nhsuk-error-summary" tabindex="-1" role="alert" aria-labelledby="error-summary-title">
  <h2 class="nhsuk-error-summary__title" id="error-summary-title">Something went wrong while processing your request:</h2>
  <div class="nhsuk-error-summary__body">Some error message</div>
</div>
<div class="sc-FEMpB bCoMRV"><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>"
`;

exports[`Displays an error if task rejects with an error with a message 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Error</label></h1>
<div class="nhsuk-error-summary" tabindex="-1" role="alert" aria-labelledby="error-summary-title">
  <h2 class="nhsuk-error-summary__title" id="error-summary-title">Something went wrong while processing your request:</h2>
  <div class="nhsuk-error-summary__body">Some error message</div>
</div>
<div class="sc-FEMpB bCoMRV"><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>"
`;

exports[`Displays an error if task rejects with an error without a message 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Error</label></h1>
<div class="nhsuk-error-summary" tabindex="-1" role="alert" aria-labelledby="error-summary-title">
  <h2 class="nhsuk-error-summary__title" id="error-summary-title">Something went wrong while processing your request:</h2>
  <div class="nhsuk-error-summary__body">Unknown error.</div>
</div>
<div class="sc-FEMpB bCoMRV"><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>"
`;

exports[`Displays an error if task rejects with anything else 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Error</label></h1>
<div class="nhsuk-error-summary" tabindex="-1" role="alert" aria-labelledby="error-summary-title">
  <h2 class="nhsuk-error-summary__title" id="error-summary-title">Something went wrong while processing your request:</h2>
  <div class="nhsuk-error-summary__body">Unknown error.</div>
</div>
<div class="sc-FEMpB bCoMRV"><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>"
`;

exports[`Error page includes a back button with the provided onclick handler 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Error</label></h1>
<div class="nhsuk-error-summary" tabindex="-1" role="alert" aria-labelledby="error-summary-title">
  <h2 class="nhsuk-error-summary__title" id="error-summary-title">Something went wrong while processing your request:</h2>
  <div class="nhsuk-error-summary__body">Some error message</div>
</div>
<div class="sc-FEMpB bCoMRV"><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="submit">Back</button></div>"
`;

exports[`Renders children if task resolves 1`] = `"<span>Some data from the backend</span>"`;

exports[`Shows loading message while task runs 1`] = `
"<div style="text-align: center;">
  <h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl sc-fLDLck eciBXj">Loading</label></h1>
  <div class="nhsuk-loader"><span class="nhsuk-loader__spinner"></span><span class="nhsuk-loader__text">Some loading message</span></div>
</div>"
`;
